--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "serverless-nodejs-api",
   "version": "1.0.0",
   "description": "",
+  "scripts": {
+    "dev": "serverless offline --stage dev",
+    "dev:aws": "serverless offline --region us-west-1"
+  },
   "dependencies": {
     "@neondatabase/serverless": "^0.9.4",
     "drizzle-orm": "^0.33.0",
@@ -9,6 +13,8 @@
     "serverless-http": "^3.2.0"
   },
   "devDependencies": {
-    "drizzle-kit": "^0.24.1"
+    "drizzle-kit": "^0.24.1",
+    "serverless-dotenv-plugin": "^6.0.0",
+    "serverless-offline": "^13.7.0"
   }
 }
