--- a/serverless.yml
+++ b/serverless.yml
@@ -4,13 +4,22 @@ org: aomcheer
 app: serverless-nodejs-neon
 # "service" is the name of this project. This will also be added to your AWS resource names.
 service: serverless-nodejs-api
+frameworkVersion: '3'
+useDotenv: true
 
 provider:
   name: aws
   runtime: nodejs20.x
+  environment:
+    DEBUG: ${env.DEBUG, 0}
+    DATABASE_URL: ${env:DATABASE_URL, "fallback value"}
 
 functions:
   api:
-    handler: handler.handler
+    handler: src/handler.handler
     events:
       - httpApi: "*"
+
+plugins:
+  - serverless-offline
+  - serverless-dotenv-plugin
