--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "drizzle-kit": "^0.24.1",
     "serverless-dotenv-plugin": "^6.0.0",
-    "serverless-offline": "^13.7.0"
+    "serverless-offline": "^13.7.0",
+    "serverless-offline-watcher": "^1.1.0"
   }
 }
