--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "serverless offline --stage dev",
-    "dev:aws": "serverless offline --region us-west-1"
+    "dev:aws": "serverless offline --region us-east-2",
+    "deploy": "serverless deploy --stage prod --region us-east-2",
+    "remove": "serverless remove --stage prod --region us-east-2"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.9.4",
+    "aws-sdk": "^2.1682.0",
     "drizzle-orm": "^0.33.0",
     "express": "^4.19.2",
     "serverless-http": "^3.2.0"
