--- a/serverless.yml
+++ b/serverless.yml
@@ -1,5 +1,5 @@
 # "org" ensures this Service is used with the correct Serverless Framework Access Key.
-org: aomcheer
+# org: aomcheer
 # "app" enables Serverless Framework Dashboard features and sharing them with other Services.
 app: serverless-nodejs-neon
 # "service" is the name of this project. This will also be added to your AWS resource names.
@@ -13,12 +13,32 @@ provider:
   environment:
     DEBUG: ${env.DEBUG, 0}
     DATABASE_URL: ${env:DATABASE_URL, "fallback value"}
+  iam:
+    role:
+      name: serverless-project-ssm-role
+      statements:
+        - Effect: 'Allow'
+          Resource: '*'
+          Action:
+            - "ssm:GetParameter"
+            - "ssm:GetParameters"
+            - "ssm:GetParametersByPath"
+            - "ssm:GetParameterHistory"
+            - "ssm:DescribeParameters"
 
 functions:
   api:
     handler: src/handler.handler
     events:
       - httpApi: "*"
+
+custom:
+  dotenv:
+    exclude:
+      - AWS_ACCESS_KEY_ID
+      - AWS_SECRET_ACCESS_KEY
+      - AWS_SESSION_TOKEN
+      - DATABASE_URL
 
 plugins:
   - serverless-offline
