--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "info": "serverless info --stage prod --region us-east-2",
     "deploy": "serverless deploy --stage prod --region us-east-2",
     "remove": "serverless remove --stage prod --region us-east-2",
-    "generate": "drizzle-kit generate --config=drizzle.config.js"
+    "generate": "drizzle-kit generate --config=drizzle.config.js",
+    "migrate": "tsx src/cli/migrator.js"
   },
   "dependencies": {
     "@aws-sdk/client-ssm": "^3.637.0",
@@ -17,9 +18,11 @@
     "serverless-http": "^3.2.0"
   },
   "devDependencies": {
+    "dotenv": "^16.4.5",
     "drizzle-kit": "^0.24.1",
     "serverless-dotenv-plugin": "^6.0.0",
     "serverless-offline": "^13.7.0",
-    "serverless-offline-watcher": "^1.1.0"
+    "serverless-offline-watcher": "^1.1.0",
+    "tsx": "^4.18.0"
   }
 }
