automate branches database secret

--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev:aws": "serverless offline --stage dev --region us-east-2",
+    "dev": "serverless offline --stage dev --region us-east-2",
     "info": "serverless info --stage prod --region us-east-2",
+    "info:dev": "serverless info --stage prod --region us-east-2",
     "deploy": "serverless deploy --stage prod --region us-east-2",
+    "deploy:dev": "serverless deploy --stage dev --region us-east-2",
     "remove": "serverless remove --stage prod --region us-east-2",
     "generate": "drizzle-kit generate --config=drizzle.config.js",
-    "migrate": "tsx src/cli/migrator.js"
+    "migrate": "tsx src/cli/migrator.js",
+    "migrate:dev": "tsx src/cli/migrator.js --stage dev",
+    "vercel-build": "echo 'hello'"
   },
   "dependencies": {
     "@aws-sdk/client-ssm": "^3.637.0",
